# sci_calculator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  includes.h  main.cpp  math oparetor combinations  parser.cpp  parser.h  sci_calculator
functions/lib/: abstract_function.h
functions/src/: abstract_function.cpp  sin.cpp
lib/: calculator.h  includes.h  parser.h
lib/component/: checker.h  displayer.h  parser.h  parser2.h  simplifier.h  str_hdl.h  string_handling.h
lib/func/: abstr_function.h  abstract_function.h  sin.h  sin_f.h
lib/manager/: constant_manager.h  function_manager.h  tree_manager.h
lib/node/: constant_node.h  embedded_node.h  embeded_node.h  function_node.h  int_node.h  math_node.h  node.h
lib/node/observer/: node_observee.h  node_observer.h  update_tree.h
managers/lib/: constant_manager.h
managers/src/: constant_manager.cpp  function_manager.cpp
memory/: constants
node/lib/: function_node.h  int_node.h  math_node.h
node/src/: function_node.cpp  math_node.cpp
src/: calculator.cpp  parser.cpp
src/component/: checker.cpp  displayer.cpp  parser.cpp  parser2.cpp  simplifier.cpp  str_hdl.cpp  string_handling.cpp
src/func/: abstract_function.cpp  sin.cpp  sin_f.cpp
src/manager/: constant_manager.cpp  function_manager.cpp  tree_manager.cpp
src/node/: constant_node.cpp  embedded_node.cpp  embeded_node.cpp  function_node.cpp  int_node.cpp  math_node.cpp  node.cpp
src/node/observer/: node_observee.cpp
